--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ Gemfile.lock
 .jekyll-cache
 .jekyll-metadata
 _site
-_app
 
 # RubyGems
 *.gem
@@ -23,3 +22,6 @@ package-lock.json
 !.vscode/extensions.json
 !.vscode/tasks.json
 
+# Misc
+_sass/dist
+assets/js/dist
