--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://doa0819.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: doa0819 # change to your GitHub username
 
 twitter:
   username: twitter_username # change to your Twitter username
